<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/TIView"
        android:background="@color/black"
        android:layout_width="768px"
        android:layout_height="768px"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="16sp"
        android:textColor="#dd2c00"
        android:id="@+id/textView_maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/maxTemp_def"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="@+id/TIView"
        app:layout_constraintTop_toBottomOf="@+id/TIView"/>
    <TextView
        android:textSize="16sp"
        android:id="@+id/textView_centTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/centTemp_def"
        app:layout_constraintStart_toStartOf="@+id/textView_maxTemp"
        app:layout_constraintTop_toBottomOf="@+id/textView_maxTemp"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_bright"
        android:id="@+id/textView_minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/minTemp_def"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/TIView"/>
    <TextView
        android:textSize="16sp"
        android:id="@+id/textView_tempHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tempHigh"
        app:layout_constraintStart_toStartOf="@+id/textView_maxTemp"
        app:layout_constraintTop_toBottomOf="@+id/textView_tempRange"/>
    <SeekBar
        android:id="@+id/seekBar_tempHigh"
        android:layout_width="140dp"
        android:layout_height="16dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_tempHigh"
        app:layout_constraintStart_toEndOf="@+id/textView_tempHigh"/>
    <TextView
        android:textSize="16sp"
        android:id="@+id/textView_tempHighVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempHighVal"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_tempHigh"
        app:layout_constraintStart_toEndOf="@+id/seekBar_tempHigh"/>
    <TextView
        android:textSize="16sp"
        android:id="@+id/textView_tempLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tempLow"
        app:layout_constraintStart_toStartOf="@+id/textView_maxTemp"
        app:layout_constraintTop_toBottomOf="@+id/textView_tempHigh"/>
    <SeekBar
        android:id="@+id/seekBar_tempLow"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_tempLow"
        app:layout_constraintStart_toEndOf="@+id/textView_tempLow"/>
    <TextView
        android:textSize="16sp"
        android:id="@+id/textView_tempLowVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempLowVal"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_tempLow"
        app:layout_constraintStart_toEndOf="@+id/seekBar_tempLow"/>
    <TextView
        android:textSize="16sp"
        android:id="@+id/textView_emiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/emiss"
        app:layout_constraintStart_toStartOf="@+id/textView_maxTemp"
        app:layout_constraintTop_toBottomOf="@+id/textView_tempLow"/>
    <SeekBar
        android:id="@+id/emissivity"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_emiss"
        app:layout_constraintStart_toEndOf="@+id/textView_emiss"/>
    <TextView
        android:textSize="16sp"
        android:id="@+id/textView_emissVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emissVal"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_emiss"
        app:layout_constraintStart_toEndOf="@+id/emissivity"/>
    <TextView
        android:textSize="16sp"
        android:id="@+id/textView_colorType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/colorType"
        app:layout_constraintStart_toStartOf="@+id/textView_maxTemp"
        app:layout_constraintTop_toBottomOf="@+id/textView_centTemp"/>
    <Spinner
        android:entries="@array/colorType"
        android:id="@+id/spinner_colorType"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_colorType"
        app:layout_constraintStart_toEndOf="@+id/textView_colorType"/>
    <TextView
        android:textSize="16sp"
        android:id="@+id/textView_tempRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tempRange"
        app:layout_constraintStart_toStartOf="@+id/textView_maxTemp"
        app:layout_constraintTop_toBottomOf="@+id/textView_colorType"/>
    <Spinner
        android:entries="@array/tempRange"
        android:id="@+id/spinner_tempRange"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_tempRange"
        app:layout_constraintStart_toEndOf="@+id/textView_tempRange"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"/>
    <CheckBox
        android:textSize="16sp"
        android:id="@+id/checkBox_LR_rev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/LR_REVERT"
        app:layout_constraintStart_toStartOf="@+id/textView_emiss"
        app:layout_constraintTop_toBottomOf="@+id/textView_emiss"/>
    <CheckBox
        android:textSize="16sp"
        android:id="@+id/checkBox_TB_rev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TB_REVERT"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/checkBox_LR_rev"
        app:layout_constraintTop_toTopOf="@+id/checkBox_LR_rev"/>
    <CheckBox
        android:textSize="16sp"
        android:id="@+id/checkBox_TempUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TempUnit"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/checkBox_TB_rev"
        app:layout_constraintTop_toTopOf="@+id/checkBox_TB_rev"/>
    <Button
        android:textSize="16sp"
        android:id="@+id/saveImage"
        android:layout_width="768px"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/saveImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_LR_rev"/>
    <CheckBox
        android:textSize="16sp"
        android:id="@+id/land_rev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/land_rev"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/textView_minTemp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
